# edgecloud

./: .gitignore  README.md  compose.yaml  docker-compose.yaml  grafana-datasource.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: edge-agent-linux-arm64-v0.4.14.sha256  edge-agent-linux-arm64-v0.4.15.sha256  edge-agent-linux-arm64-v0.4.16.sha256  edge-agent-linux-arm64-v0.4.2.sha256  edge-agent-linux-arm64-v0.4.6.sha256  edge-agent-linux-arm64-v0.4.7.sha256  go.mod  go.sum  main.go  main.go.ori
api-certs/: api.crt  api.csr  api.key
certs/: ca.crt  ca.key  ca.srl  san.cnf  server.crt  server.csr
control-plane-api/: .dockerignore  .env  Dockerfile  Makefile  alembic.ini  pyproject.toml
control-plane-api/alembic/: env.py
control-plane-api/alembic/versions/: 1cb2b56243f5_add_schedule_and_recurrence_columns_to_.py  29103806f22a_change_schedule_column_to_string.py  2c0dbacc6304_add_jobs_table.py
control-plane-api/src/control_plane_api/: db.py  main.py
control-plane-api/src/control_plane_api.egg-info/: SOURCES.txt
control-plane-api/src/edgecloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
control-plane-api/tests/: test.py  test_1.py  test_jobs.py  test_scheduler.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/alerts/: page.tsx
dashboard/src/app/api/register/: route.ts
dashboard/src/app/devices/: page.tsx
dashboard/src/app/devices/[id]/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/settings/api/: page.tsx
dashboard/src/app/settings/register/: page.tsx
dashboard/src/app/settings/tokens/: page.tsx
dashboard/src/app/workflows/: [workflowId].tsx  create.tsx  page.tsx
dashboard/src/components/: DashboardCard.tsx  Header.tsx  RealTimeDashboard.tsx  Sidebar.tsx  TrendChart.tsx
dashboard/src/lib/: api.ts
device-certs/: pi-01.crt  pi-01.csr  pi-01.key
monitoring/: prometheus.yml
monitoring/rules/: edge-agent.rules.yml
tmp-enroll/: test.csr  test.key
