# pyproject.toml  (repo root)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecloud"              # what “pip install edgecloud” gives you
version = "0.1.0"
description = "Edge-Cloud control-plane API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.1",
  "uvicorn[standard]==0.29.0",
  "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "asyncpg",
  "alembic",
  "pytest",
  "ruff",
  "mypy",
  "psycopg2-binary",
]

# ───── Tell setuptools how to find the *Python* code ─────
[tool.setuptools]
package-dir = {"" = "control-plane-api/src"}   # all packages live under that path

[tool.setuptools.packages.find]
where   = ["control-plane-api/src"]            # only scan this dir
include = ["control_plane_api*"]               # and only these pkgs
